# gsascode

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.gsascode/: config.yml
.gsascode/files/workspaces/: __list.json  __list.yaml  diff.json  diff.yaml  test.json  test.yaml
Geoserver Docker REST/: Healtcheck.bru  bruno.json  collection.bru
Geoserver Docker REST/Workspaces/: Get Workspace by ID.bru  Get Workspaces.bru  folder.bru
Geoserver Docker REST/environments/: dev.bru
src/: apply.py  auth.py  dump.py  dumpers.py  env.py  init.py  log.py  login.py  plan.py  pull.py
src/core/: env.py  routes.py
src/exceptions/: base.py
src/types/: format.py  modes.py
src/utils/: decorators.py  dropper.py  dumpers.py  loaders.py  workspaces.py
