[project]
name = "gsascode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "click>=8.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]


[project.scripts]
init = "src.init.init"
login = "src.auth.login"
